--- a/dev/css/accounts.css
+++ b/dev/css/accounts.css
@@ -13,22 +13,21 @@ h1 {
   font-size: 1.5rem;
 }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-  border-spacing: 0;
+ul {
+  list-style: none;
+  padding: 0;
 }
 
-th {
-  font-weight: normal;
+li {
+  padding: 1rem 0;
+  border-top: 1px solid #ddd;
 }
-
-th,
-td {
-  padding: 5px;
-  border: 1px solid #ddd;
-  font-size: 14px;
-  text-align: center;
+li div {
+  display: flex;
+  align-items: center;
+}
+li strong {
+  margin-left: 10px;
 }
 
 /*# sourceMappingURL=accounts.css.map */
