--- a/src/sass/accounts.scss
+++ b/src/sass/accounts.scss
@@ -13,20 +13,37 @@ h1 {
     font-size: 1.5rem;
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-    border-spacing: 0;
+ul {
+    list-style: none;
+    padding: 0;
 }
 
-th {
-    font-weight: normal;
+li {
+    padding: 1rem 0;
+    border-top: 1px solid #ddd;
+    div {
+        display: flex;
+        align-items: center;
+    }
+    strong {
+        margin-left: 10px;
+    }
 }
 
-th,
-td {
-    padding: 5px;
-    border: 1px solid #ddd;
-    font-size: 14px;
-    text-align: center;
-}
+// table {
+//     width: 100%;
+//     border-collapse: collapse;
+//     border-spacing: 0;
+// }
+
+// th {
+//     font-weight: normal;
+// }
+
+// th,
+// td {
+//     padding: 5px;
+//     border: 1px solid #ddd;
+//     font-size: 14px;
+//     text-align: center;
+// }
