--- a/src/sass/accounts.scss
+++ b/src/sass/accounts.scss
@@ -19,14 +19,25 @@ ul {
 }
 
 li {
-    padding: 1rem 0;
-    border-top: 1px solid #ddd;
+    padding: 0 1rem;
+    margin-bottom: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+
     div {
         display: flex;
         align-items: center;
+        justify-content: space-between;
+        border-top: 1px dashed #ddd;
     }
-    strong {
-        margin-left: 10px;
+
+    .unit {
+        margin-left: 0.5rem;
+        font-size: 12px;
+        color: #666;
+    }
+    .actions {
+        padding: 1rem 0;
     }
 }
 
