--- a/dev/css/accounts.css
+++ b/dev/css/accounts.css
@@ -30,7 +30,8 @@ li div {
   justify-content: space-between;
   border-top: 1px dashed #ddd;
 }
-li .unit {
+li .unit,
+li .percent {
   margin-left: 0.5rem;
   font-size: 12px;
   color: #666;
