--- a/src/sass/accounts.scss
+++ b/src/sass/accounts.scss
@@ -31,7 +31,8 @@ li {
         border-top: 1px dashed #ddd;
     }
 
-    .unit {
+    .unit,
+    .percent {
         margin-left: 0.5rem;
         font-size: 12px;
         color: #666;
