--- a/dev/css/accounts.css
+++ b/dev/css/accounts.css
@@ -34,6 +34,10 @@ ul {
 .tradeState p {
   margin: 0;
 }
+.tradeState .value {
+  font-weight: bold;
+  color: #c948c9;
+}
 
 .accountsList {
   margin: 0 1rem;
@@ -50,6 +54,10 @@ ul {
   align-items: center;
   justify-content: space-between;
   border-top: 1px dashed #dae9f6;
+}
+.accountsList li .value {
+  font-weight: bold;
+  color: #c948c9;
 }
 .accountsList li .actions {
   padding: 1rem 0;
