--- a/src/sass/accounts.scss
+++ b/src/sass/accounts.scss
@@ -38,6 +38,11 @@ ul {
     p {
         margin: 0;
     }
+
+    .value {
+        font-weight: bold;
+        color: #c948c9;
+    }
 }
 
 .accountsList {
@@ -55,6 +60,11 @@ ul {
             align-items: center;
             justify-content: space-between;
             border-top: 1px dashed #dae9f6;
+        }
+
+        .value {
+            font-weight: bold;
+            color: #c948c9;
         }
 
         .actions {
