--- a/src/sass/accounts.scss
+++ b/src/sass/accounts.scss
@@ -8,9 +8,11 @@ button {
     cursor: pointer;
 }
 
-h1 {
-    margin: 1rem;
-    font-size: 1.5rem;
+.investment {
+    &-title {
+        margin: 1rem;
+        font-size: 1.5rem;
+    }
 }
 
 h2 {
@@ -23,21 +25,21 @@ ul {
     padding: 0;
 }
 
-.tradeState {
+.assets-overview {
     margin-bottom: 2rem;
     padding: 1rem;
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
 
     // border-radius: 10px;
+}
 
-    li {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        // border-top: 1px dashed #ddd;
-        padding: 8px 0;
-    }
+.asset-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    // border-top: 1px dashed #ddd;
+    padding: 8px 0;
 
     p {
         margin: 0;
@@ -49,7 +51,7 @@ ul {
     }
 }
 
-.accountsList {
+.accounts-list {
     margin: 0 1rem;
 
     .actions {
@@ -79,7 +81,7 @@ ul {
     }
 }
 
-.accountItem {
+.account-item {
     overflow: hidden;
     padding: 0 1rem;
     margin-bottom: 1rem;
