--- a/dev/css/accounts.css
+++ b/dev/css/accounts.css
@@ -123,26 +123,30 @@ ul {
   margin: 1rem 0;
   color: #666;
 }
-.sellOrder dl {
+.sellOrder-list {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   font-size: 14px;
   color: #666;
 }
-.sellOrder dt,
-.sellOrder dd {
+.sellOrder-list dt,
+.sellOrder-list dd {
   margin: 10px 0;
 }
-.sellOrder dt {
+.sellOrder-list dt {
   width: 30%;
 }
-.sellOrder dd {
+.sellOrder-list dd {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   box-sizing: border-box;
   width: 70%;
   padding-left: 10px;
+}
+.sellOrder-list .sellPrice {
+  display: block;
 }
 .sellOrder input {
   box-sizing: border-box;
@@ -169,9 +173,28 @@ ul {
 .sellOrder .orderAvailable .value {
   font-weight: bold;
 }
-.sellOrder .sellPrice button {
-  padding: 0 14px;
-  font-size: 1.5rem;
+.sellOrder .sellPrice-inputs {
+  display: flex;
+  align-items: center;
+}
+.sellOrder .sellPrice-options {
+  display: flex;
+  justify-content: space-between;
+  gap: 2px;
+  margin-top: 15px;
+}
+.sellOrder .sellPrice-options label {
+  display: flex;
+}
+.sellOrder-memo dl {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  font-size: 12px;
+}
+.sellOrder-memo dt,
+.sellOrder-memo dd {
+  margin: 0;
 }
 .sellOrder-actions {
   display: flex;
@@ -200,7 +223,7 @@ ul {
 }
 .sellOrder button:disabled {
   pointer-events: none;
-  opacity: 0.5;
+  opacity: 0.3;
 }
 .sellOrder button:focus-visible {
   outline: #ad9b8d auto 1px;
