--- a/dev/css/accounts.css
+++ b/dev/css/accounts.css
@@ -196,6 +196,13 @@ ul {
 .sellOrder .sellPrice-options-input input {
   width: 70px;
 }
+.sellOrder-caution {
+  border-radius: 8px;
+  padding: 8px 10px;
+  border: 1px solid #ddd;
+  font-size: 12px;
+  color: red;
+}
 .sellOrder-memo dl {
   display: flex;
   justify-content: space-between;
