--- a/src/sass/accounts.scss
+++ b/src/sass/accounts.scss
@@ -235,6 +235,14 @@ ul {
     // .totalOrderAmount {
     // }
 
+    &-caution {
+        border-radius: 8px;
+        padding: 8px 10px;
+        border: 1px solid #ddd;
+        font-size: 12px;
+        color: red;
+    }
+
     &-memo {
         dl {
             display: flex;
